--- a/index.html
+++ b/index.html
@@ -48,15 +48,17 @@
     	<h2 style="color:#8FAD00;">S</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">A</h2>
+    	<h2 style="color:#8377E4;">H</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">M</h2>
+    	<h2 style="color:#99C96A;">A</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">A</h2>
+    	<h2 style="color:#20CFB4;">M</h2>
     </div>
-    
+    <div class="balloons text-center" id="b8">
+    	<h2 style="color:#8377E4;">A</h2>
+    </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
  
