--- a/index.html
+++ b/index.html
@@ -185,6 +185,13 @@
 
 
 	</div>
+<div class="bottom-container">
+        <a class="footer-link" href="#">Facebook</a>
+        <a class="footer-link" href="#">Twitter</a>
+        <a class="footer-link" href="#">Website</a>
+        <p class="copyright">© 2020 Hitesh Agrawal.</p>
+      </div>
+
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
