--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Shama Fatma</p>
+				<p>a very happy birthday Shama, Made with heart by Hitesh</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
