--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	<title>Happy Birthday</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Shama">
+	<meta name="description" content="Happy Birthday Sanjana">
 	<meta name="robots" content="index, follow" />
 	<link rel="author" href="https://aboutme.google.com/u/0/?referer=gplus" /> 
     <meta name="keywords" content="Birthday, Happy">
@@ -36,25 +36,25 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">❤</h2>
+    	<h2 style="color:#F2B300;">S</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">S</h2>
+    	<h2 style="color:#0719D4;">A</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">H</h2>
+    	<h2 style="color:#D14D39;">N</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">A</h2>
+    	<h2 style="color:#8FAD00;">J</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">M</h2>
+    	<h2 style="color:#8377E4;">A</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">A</h2>
+    	<h2 style="color:#99C96A;">N</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">❤</h2>
+    	<h2 style="color:#20CFB4;">A</h2>
     </div>
   
 
@@ -154,7 +154,7 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Shama, Made with heart by Hitesh</p>
+				<p>a very happy birthday Sanjana, Made with heart.</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
